--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic
-title: 潘柏信
+title: 张睿
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
 avatarTitle: leopardpan
 # 头像里面的描述
 avatarDesc: iOS / 机器学习
-url: "http://baixin.io"
+url: "https://zrryan.github.io"
 
 # Comment
 comment:
@@ -18,7 +18,7 @@ social:
     weibo: 5366874726 
     github: leopardpan
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: ruizhang1314@gmail.com
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
