--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 张睿
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: 张睿
 # 头像里面的描述
 avatarDesc: iOS / 机器学习
 url: "https://zrryan.github.io"
