--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Basic
-title: 张睿
-subtitle: 个人站
+title: 张 睿
+subtitle: 个人博客
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: 张睿
+avatarTitle: Ryan Zhang
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
+avatarDesc: iOS / 机器学习 / 项目管理
 url: "https://zrryan.github.io"
 
 # Comment
