修改第三方平台账号

--- a/_config.yml
+++ b/_config.yml
@@ -10,13 +10,13 @@ url: "https://zrryan.github.io"
 
 # Comment
 comment:
-    disqus: leopard
+    disqus: Ryan
     # uyan: 2143225  # 有言id,登录有言官网申请
 
 # Social
 social:
-    weibo: 5366874726 
-    github: leopardpan
+    weibo: 3095632363 
+    github: ZRRyan
     # twitter: 
     mail: ruizhang1314@gmail.com
 
